force-app/main/default/objects/Account/fields/LastContactDate__c.field-meta.xml
<CustomField>
    <fullName>LastContactDate__c</fullName>
    <description>直近の接触日。フローによって更新される。</description>
    <label>最終接触日</label>
    <type>Date</type>
</CustomField>