force-app/main/default/objects/Account/fields/PreviousContactDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousContactDate__c</fullName>
    <description>最終接触日のひとつ前の値。フローによって LastContactDate__c のスライド処理で更新される。</description>
    <label>前回接触日</label>
    <type>Date</type>
</CustomField>