force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>営業が管理する取引先の活動ステータス</description>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>新規</label>
            </value>
            <value>
                <fullName>Negotiating</fullName>
                <label>商談中</label>
            </value>
            <value>
                <fullName>Dormant</fullName>
                <label>休眠</label>
            </value>
            <value>
                <fullName>Lost</fullName>
                <label>失注</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>